<resources>
    <string name="app_name">Debug City v1</string>
    <string name="admin">Admin</string>
    <string name="button_addIncident">Add</string>
    <string name="button_addCategory">Add</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_incident">Add Incident</string>
    <string name="action_settings">Settings</string>
    <string name="key_id">ID</string>
    <string name="key_latitude">LATITUDE</string>
    <string name="key_longitude">LONGITUDE</string>
    <string name="key_category">CATEGORY</string>
    <string name="charts">Charts</string>
    <string name="key_name">NAME</string>
    <string name="key_description">DESCRIPTION</string>
    <string name="lat">Lat:</string>
    <string name="Long">Long:</string>
    <string name="logout">Logout</string>
    <string name="title_activity_admin_menu">AdminMenu</string>
    <string name="title_activity_incident_list">IncidentList</string>
    <string name="title_activity_category_list">CategoryList</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="edit">EDIT</string>
    <string name="reset">RESET</string>
    <string name="refresh">REFRESH</string>
    <string name="submit">Submit</string>
    <string name="get_location">Get Location</string>
    <string name="map">Map</string>
    <string name="shoot">Shoot</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="photo">Photo</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_incident_details">IncidentDetails</string>
    <string name="title_activity_category_details">CategoryDetails</string>
    <string name="title_activity_incident_add">IncidentAdd</string>
    <string name="title_activity_category_add">CategoryAdd</string>
    <string name="title_activity_my_location">MyLocationActivity</string>
    <string name="title_activity_user_add">UserAdd</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="DebugCity">DebugCity</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_spider_chart">SpiderChartActivity</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="facebook_app_id">1638048859787444</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_activity_start">ActivityStart</string>
</resources>
