<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.greylabs.sumod.dbct10.CategoryAdd">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_name"
        android:id="@+id/cat_key_name_view"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_description"
        android:id="@+id/cat_key_desc_view"
        android:layout_below="@+id/cat_key_name_view"
        android:layout_alignParentStart="true"
        android:paddingBottom="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button_save_category"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="buttonSaveCategory"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cat_name_editTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/cat_key_desc_view" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cat_desc_editTextView"
        android:layout_below="@+id/cat_name_editTextView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/cat_key_desc_view" />
</RelativeLayout>
