<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.greylabs.sumod.dbct10.Activities.UserAdd"
    android:background="@color/button_material_dark">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:id="@+id/linearLayout1">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/lat"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:id="@+id/user_key_latitude_view"
        android:paddingBottom="30dp"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        android:textColor="@color/abc_primary_text_material_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/user_lat_editTextView"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:maxLines="1"
        android:layout_weight="1"
        android:textColor="@color/abc_primary_text_material_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/Long"
        android:id="@+id/user_key_longitude_view"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingBottom="30dp"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        android:textColor="@color/abc_primary_text_material_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/user_long_editTextView"
        android:maxLines="1"
        android:layout_weight="1"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:textColor="@color/abc_primary_text_material_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/user_pincode_editTextView"
            android:maxLines="1"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:paddingBottom="30dp"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:textColor="@color/abc_primary_text_material_dark" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:layout_below="@+id/linearLayout1"
    android:layout_alignParentStart="true"
    android:id="@+id/linearLayout2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_category"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:id="@+id/user_key_category_view"
        android:paddingBottom="30dp"
        android:paddingEnd="20dp"
        android:paddingStart="0dp"
        android:textColor="@color/abc_primary_text_material_dark" />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_weight="1"/>

</LinearLayout>


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button_user_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="buttonUserSave"
        android:backgroundTint="@color/background_material_light" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_imageView"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:layout_above="@+id/button_user_save"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout2"
        android:onClick="buttonSelectImage" />
</RelativeLayout>
