<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.greylabs.sumod.dbct10.IncidentAdd"
    android:background="@color/material_blue_grey_800">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout_lat_long">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lat"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:id="@+id/inc_key_lat_view"
            android:paddingEnd="20dp"
            android:paddingStart="0dp"
            android:paddingBottom="30dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/inc_lat_editTextView"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Long"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:id="@+id/inc_key_long_view"
            android:paddingEnd="20dp"
            android:paddingStart="0dp"
            android:paddingBottom="30dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/inc_long_editTextView"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout_lat_long"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout_cat_spin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/key_category"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:id="@+id/inc_key_cat_view"
            android:paddingBottom="30dp"
            android:paddingEnd="20dp"
            android:paddingStart="0dp"
            android:textColor="@android:color/white" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner_category"
            android:layout_weight="1"
            android:background="@color/button_material_dark"
            android:popupBackground="@color/primary_material_light"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button_save_incident"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="buttonSaveIncident"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/button_get_location"
        android:onClick="buttonGetLocation"
        android:background="@android:drawable/ic_menu_mylocation"
        android:backgroundTint="@color/bright_foreground_material_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:backgroundTintMode="multiply" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inc_imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/button_get_location"
        android:layout_below="@+id/linearLayout_cat_spin" />

    <Button
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:onClick="buttonShootIncident"
        android:id="@+id/shoot_incident"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/ic_menu_camera"
        android:backgroundTint="@color/bright_foreground_material_dark"
        android:backgroundTintMode="multiply" />



</RelativeLayout>
